# fzcloud

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindGRPC.cmake
include/fzc/: DockerHandler.h  JobState.h  SyncFile.h  conf.h  time.h  util.h
include/fzcurl/: CurlBaseOp.h  CurlDel.h  CurlDown.h  CurlList.h  CurlUp.h
include/fzrpc/: AsyncClientCall.h  CallbackHandler.h  ClientCallMethod.h  RpcClient.h  RpcConnection.h  RpcLib.h  RpcServer.h
src/fzc/: CMakeLists.txt  DockerHandler.cc  Master.cc  Slave.cc  SyncFile.cc  util.cc
src/fzc/test/: CMakeLists.txt  smtest.cpp
src/fzcurl/: CMakeLists.txt  CurlBaseOp.cc  CurlDel.cc  CurlDown.cc  CurlList.cc  CurlUp.cc
src/fzcurl/test/: CMakeLists.txt  downloadtest.cc
src/fzrpc/: CMakeLists.txt  ClientCallMethod.cc  RpcClient.cc
src/fzrpc/protos/: compiler.sh  fzrpc.grpc.pb.cc  fzrpc.grpc.pb.h  fzrpc.pb.cc  fzrpc.pb.h  fzrpc.proto
src/fzrpc/test/: AsyncClient.cc  CMakeLists.txt  ServerTest.cc
src/sources/: Dockerfile  init.sh
